--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,11 +12,46 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
-    </main>
-
-    <footer>
-      <p>I can code!</p>
-    </footer>
-  </body>
-</html>
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The link element connects an external resource to the HTML document.</li>
+          <li>The script element embeds client-side scripts in the HTML document.</li>
+          </ul>
+        </section>
+        <section class="card" id="css-section">
+          <h2>CSS</h2>
+          <ul>
+            <li>Enter your CSS notes here</li>
+            </ul>
+            </section>
+            <section class="card" id="git-section">
+            <h2>Git</h2>
+            <ul>
+              <li>git status: checks what branch we are currently on</li>
+              <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+              <li>pwd displays the current working directory</li>
+              <li>ls displays the list of files and folders in the current directory</li>
+              <li>cd navigates between directories in the path</li>
+              <li>cd.. navigates backwards, one level at a time, through the path of your directories</li>
+              <li>mkdir creates a new directory</li>
+              <li>touch creates a new file inside a directory</li>
+              <li>Start "name of file" opens the file</li>
+              </ul>
+              </section>
+              <section class="card" id="javascript-section">
+                <h2>JavaScript</h2>
+                <ul>
+                  <li>Enter your JavaScript notes here</li>
+                  </ul>
+                  </section>
+                  </main>
+                  <footer>
+                    <p>I can code!</p>
+                    </footer>
+                    </body>
+                    </html>
+            
+        
