added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -24,7 +25,12 @@
         <section class="card" id="css-section">
           <h2>CSS</h2>
           <ul>
-            <li>Enter your CSS notes here</li>
+            <li>A declaration contains two important components, the CSS property and the value of the property</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside of an element.</li>
+            <li>inline CSS applies to a specific HTML tag; useful for quick and permanent changes</li>
+            <li>internal CSS applies to a specific HTML page; useful for a single page</li>
+            <li>external CSS applies to multiple HTML pages; useful for multiple pages; most common and preffered due to being able to keep all CSS rules in separate file</li>
             </ul>
             </section>
             <section class="card" id="git-section">
